// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TTravelBase
message TTravelBase
{	
	
	
	repeated TravelDefine Travel = 1; // Travel

}

// Defined in table: Travel
message TravelDefine
{	
	
	
	optional string Id = 1; // id
	
	
	optional uint32 Event = 2; // 触发后的事件

}

